--- a/03-Worboo/packages/relayer/config/relayer.config.json.example
+++ b/03-Worboo/packages/relayer/config/relayer.config.json.example
@@ -7,6 +7,7 @@
   "maxRetries": 3,
   "backoffMs": 1000,
   "cachePath": ".cache/processed-events.jsonl",
+  "cacheMaxEntries": 1000,
   "healthPath": ".cache/health.json",
   "healthHost": "0.0.0.0",
   "healthCorsOrigin": "*",
